# OSPRay-visualization

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/hello/: CMakeLists.txt  hello.cpp
src/materials/: CMakeLists.txt  alloy.cpp  glass.cpp  metal.cpp  obj.cpp
src/objects/: Boxes.cpp  CMakeLists.txt  Planes.cpp  RandomSpheres.cpp  Spheres.cpp  mesh.cpp
src/volumes/: CMakeLists.txt  domain.cpp  particle_volume.cpp  spherical_data.h  structured_regular.cpp
