# cmake for Spheres ospray application
cmake_policy(SET CMP0074 NEW)
set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_C_EXTENSIONS OFF)
set(CMAKE_CXX_STANDARD 17 CACHE STRING "The C++ standard to use")
set(CMAKE_CXX_STANDARD_REQUIRED ON)
#if(MSVC)
# this is only needed when building a library on windows. I think. 
#   message(" doing shared library foo")
#    set(BUILD_SHARED_LIBS TRUE)
#    set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
#endif(MSVC)
add_executable(SPHERES ${CMAKE_CURRENT_SOURCE_DIR}/Spheres.cpp)
target_link_libraries(SPHERES ospray::ospray rkcommon::rkcommon)
add_executable(BOXES ${CMAKE_CURRENT_SOURCE_DIR}/Boxes.cpp)
target_link_libraries(BOXES ospray::ospray rkcommon::rkcommon)
add_executable(PLANES ${CMAKE_CURRENT_SOURCE_DIR}/Planes.cpp)
target_link_libraries(PLANES ospray::ospray rkcommon::rkcommon)
add_executable(RANDOM_SPHERES ${CMAKE_CURRENT_SOURCE_DIR}/RandomSpheres.cpp)
target_link_libraries(RANDOM_SPHERES ospray::ospray rkcommon::rkcommon)
add_executable(MESH ${CMAKE_CURRENT_SOURCE_DIR}/mesh.cpp)
target_link_libraries(MESH ospray::ospray rkcommon::rkcommon)