# cmake for Volumes ospray application
cmake_policy(SET CMP0074 NEW)
set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_C_EXTENSIONS OFF)
set(CMAKE_CXX_STANDARD 17 CACHE STRING "The C++ standard to use")
set(CMAKE_CXX_STANDARD_REQUIRED ON)
#if(MSVC)
# this is only needed when building a library on windows. I think. 
#   message(" doing shared library foo")
#    set(BUILD_SHARED_LIBS TRUE)
#    set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
#endif(MSVC)
add_executable(REGSTRUCT spherical_data.h ${CMAKE_CURRENT_SOURCE_DIR}/structured_regular.cpp)
target_include_directories(REGSTRUCT PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(REGSTRUCT ospray::ospray rkcommon::rkcommon)
add_executable(DOMAIN spherical_data.h ${CMAKE_CURRENT_SOURCE_DIR}/domain.cpp)
target_include_directories(DOMAIN PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(DOMAIN ospray::ospray rkcommon::rkcommon)